# columns-widget

./: Makefile  README.md  pyproject.toml  requirements.txt
src/columns_widget/: __init__.py  cli.py  columns.py
src/columns_widget/game_model/: __init__.py  columns_board.py  columns_scoring.py  columns_tile.py  faller_movements.py  match_rules.py  tile_movements.py
src/columns_widget/game_view/: __init__.py
test/unit/: test_columns_widget.py
test/unit/game_model/: test_columns_matches.py  test_columns_tile.py  test_faller_movements.py  test_tile_movements.py
